--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,30 +9,12 @@ authors = [
   { name="Michael Dennis", email="michael@dipduo.com" },
 ]
 
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
-addopts = [
-    "-v",
-    "--strict-markers",
-    "--tb=short",
-    "--disable-warnings",
-]
-
-markers = [
-    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests that require network access",
-]
-
-[build-system]
-requires = ["setuptools>=45", "wheel"]
-build-backend = "setuptools.build_meta"
-
-
 
 dependencies = []
+
+[tool.setuptools]
+packages = { find = { include = ["pwa_launcher*"], exclude = ["support*", "tests*"] } }
+
 
 [project.optional-dependencies]
 dev = [
